--- a/_i18n/en/_posts/2019-09-19-商周專欄-大學與社創的距離.md
+++ b/_i18n/en/_posts/2019-09-19-商周專欄-大學與社創的距離.md
@@ -1,32 +1,33 @@
 ---
   layout: "post"
-  title: "Business Week Column: Distance between University and Social Innovation"
-  excerpt: "The creativity and vitality demonstrated by the teachers and students fully demonstrate the socialist spirit of \"the things of all, the help of the people.\""
+  title: "Universities can be Social Innovation Organizations too"
+  excerpt: "Teachers and students have fully demonstrated the spirit of social innovation: “everyone’s business, everyone helps.”"
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/8/8684ab48f4ab0d2f6a57471f21535170c04e093e.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🎓 "Can private universities turn into a social innovation organizations?" A few days ago, Professor Richard Fang from the Culture University asked me this question.
 
-🎓 “Can a private school become a social innovation organization?” A few days ago, Fang Yuanzhang from the Culture University asked me this question. 
+📜 Professor Fang asked this question because the Department of Commerce announced the "Principles of Social Innovation Organization Registration" in August this year.
 
-📜 Fang will ask this question because the Ministry of Economic Affairs announced the “Registration Principles for Social Innovation Organizations” in August this year. 
+⚖️ Last year, the "Corporation Law" was amended to include the conditions for company establishment, and added "the company's actions to promote public interest." Social enterprises that take into account their social responsibility and market operations can register as a company and voluntarily expose the charter to solve the problem in the past that profit and mission are unable to balance.
 
- Last year, the &quot;Company Law&quot; was amended, and the conditions for the establishment of the first company were added, and &quot;the company has adopted the act of promoting public interest.&quot; Social enterprises that take into account the social mission and market operations can register as a company and voluntarily expose the charter to solve the problem that the past profit and mission are incompatible. 
+⏳ However, in the social enterprise ecosystem, organizations with various forms also hoping that each other's missions and  results can be more clearly disclosed in public. Therefore, when the amendment to the "Company Law" was passed, the Legislature  attached a resolution requesting the government to discuss how to respond to the needs of these friends within a year.
 
- However, in the social enterprise ecosystem, organizations with various types of organizations also hope that their social missions and concrete results can be more clearly disclosed. Therefore, when the amendment to the &quot;Company Law&quot; was passed, the Legislative Yuan attached a resolution requesting the government to discuss how to respond to the needs of these friends within one year. 
+🇪🇨 To this end, many friends are actively seeking methods and providing advice. In March, I met with William H. Clark, Jr., the main promoter of the Common Law Act in the United States. He shared the case of Ecuador and provided a reference for Taiwan: that is, first proposing administrative rules and experimenting for a while, then form a formal law.
 
-🇪🇨 To this end, many friends are actively seeking ways and advice. In March of this year, I met with William H. Clark, Jr., the main promoter of the United States&#39; Common Law Act. He shared the case of Ecuador and provided a reference for Taiwan: that is, after first proposing administrative rules and experimenting for a while, Form a formal law. 
+🤝 The advantage of "administrative rules" is that organizers who are committed to social innovation can proactively expose their charters, missions, and public interest reports without penalties. Not only to protect the current legal mechanism, but also let relevant companies refer to the results during the trial, and then decide how to form the law.
 
- The advantage of &quot;administrative rules&quot; is that organizers who are committed to social innovation can take the initiative to expose the charter, mission and public interest report without penalties. Not only is the protection in the current legal mechanism, but also the relevant units refer to the results of the trial, and then decide how the law is fixed. Therefore, we use the &quot;social innovation organization registration principle&quot; as a pilot point. Any organization type can be registered as a social creation organization. The purpose is to enable any friend who is interested in social creation to log on the platform. Find a partner and expand the social circle. 
+🏡 Therefore, we wrote the "Principles of Social Innovation Organization Registration" as a pilot point. Any type of organization can be registered as a social creation organization. The purpose is to enable any friend who is interested in social innovation to find a partner by log into the platform and expand social innovation ecosystem.
 
- So, can private schools become social innovation organizations? My answer is: &quot;Of course!&quot; Private colleges and universities, as long as they are registered in the organization type of the &quot;corporate corporation&quot;, they can be regarded as &quot;business-oriented mode and financial corporation&quot;. A social organization that is a type of organization. 
+🏫  So, can private universities turn into social innovation organizations? My answer is: "Of course!" Private colleges and universities, as long as they are registered in the organization type under the "financial corporation", they can be regarded as a "business oriented financial corporation".
 
- Over the years, both the Ministry of Education&#39;s &quot;U-start Innovation and Entrepreneurship Program&quot; or the &quot;University Social Responsibility Practice Program&quot; (USR) have demonstrated the creativity and vitality of the teachers and students. The creative spirit of &quot;the things of all, the help of the people.&quot; As a organizer, colleges and universities will also develop closer partnerships for the practice of sustainable development. 
+🌱 Over the years, whether it is the Ministry of Education's "U-start Innovation and Entrepreneurship Program" or the "University Social Responsibility Practice Program" (USR), the creativity and vitality demonstrated by the teachers and students have fully demonstrated the spirit of social innovation: "everyone's business, everyone helps." As a organizer, colleges and universities will also develop closer partnerships for the practice of sustainable development.
 
- Recently, the Cultural University has officially registered as a social innovation organization. I also look forward to the future, whether it is a public or private higher education institution, can join the [si.taiwan.gov.tw](https://si.taiwan.gov.tw) platform to join the ranks of social organizations. 
+🚸 The registration for the Cultural University has just completed. I hope that in the future, both public and private higher education institutions will be able to log in together on the [si.taiwan.gov.tw](https://si.taiwan.gov.tw) platform and become fellow organizations to empower social innovation.
 
  <center> 
  <iframe width="560" height="315" src="https://www.youtube.com/embed/ui6C1LEy0sg" frameborder="0" allowfullscreen></iframe> 
