--- a/_i18n/en/_posts/2019-08-12-媽祖抵家-護你平安.md
+++ b/_i18n/en/_posts/2019-08-12-媽祖抵家-護你平安.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
   title: "Mazu protecting you at home"
-  excerpt: "“Rounding Team” is transforming the exemplary experiences of end-of-life care in Taiwan that rank among the top in the world into a “smart mobile care support platform” that patients and their family members can use at home through mobile phones or computers."
+  excerpt: "“Rounding Team” is transforming the exemplary experiences of end-of-life care in Taiwan that rank among the top in the world into a “smart mobile care support platform.”"
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/e/ecb7dffd972a721dec11a2bc4a500f655f76a2f3.jpeg"
   author: "Audrey Tang, Zach Huang"
   category: "blog"
