--- a/_i18n/en/_posts/2019-09-23-許一個安全的台灣.md
+++ b/_i18n/en/_posts/2019-09-23-許一個安全的台灣.md
@@ -1,19 +1,24 @@
 ---
   layout: "post"
-  title: "Apple column: Make a safe Taiwan"
-  excerpt: "In addition to observing and commenting on this national event, the \"digital dialogue\" also gave everyone a rare opportunity to participate in the actual situation."
+  title: "Safeguarding Taiwan"
+  excerpt: "In addition to analyzing and discussing this key development, the Digital Dialogues give the people a voice in this vital aspect of U.S.-Taiwan relations."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/9/93f7f00652cc6dbed3c8f0e473dc2791fcb8339a.jpeg"
-  author: "唐鳳、黃子維"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+🛡️ Taiwan is home to more than 23 million people. One point on which all agree is the importance of safeguarding national security. In the past, related policymaking was the exclusive domain of the government. Today, the people can help shape this critically important process by participating in the on-going [Digital Dialogue](https://talkto.ait.org.tw/).
 
- As the home of 23 million people, maintaining national security has always been the common expectation of all the people, and it is the goal of hard work. What is different from the past is that today, we have more opportunities to discuss national security issues and make contributions: for example, to participate in the “intelligence and harmony – digital dialogue” ([TalkTo.AIT.org.tw]( https://talkto.ait.org.tw/) ). 
+📲 The Digital Dialogues are part of the AIT@40 campaign launched by the American Institute in Taiwan (AIT), the Ministry of Foreign Affairs, and the Public Digital Innovation Space in an effort to help digitally democratize the U.S.-Taiwan relationship.  They are, according to AIT, “the first of its kind anywhere in the world  – a public forum to discuss the results of an artificial intelligence-enabled digital dialogue between a foreign mission and a local community on how to tackle a pressing foreign policy challenge.”
 
-📲 “Digital Dialogue” was launched by the American Association of Taiwanese (AIT), the Ministry of Foreign Affairs, and my office (PDI). A series of online public consultations will focus on "improving Taiwan's role in the global community" and "improving US-Taiwan economic and commercial relations" in the fourth, sixth, eighth and November of this year. "Safe cooperation" and the next four issues of "promoting the relationship between the people of the United States and Taiwan" have publicly sought advice from the public. In other words, if you want to know why Taiwan needs to purchase the latest "F-16V" fighters from the United States, or the most powerful chariot "M1A2" on the surface, how much self-defense ability can be added, and we How should we cooperate with the United States in order to strengthen its own defense industry? Any discussion about security cooperation between Taiwan and the United States is what we are asking for. 
+🍀 They comprise four online public consultations this year on Taiwan’s role in global society, April; U.S.-Taiwan economic and commercial exchanges, June; U.S.-Taiwan security cooperation, August; and people-to-people ties, November.  As AIT Director Brent Christensen said, “AIT is interested in what you, the public, have to say on these matters.  We hope these dialogues will provide valuable insights that AIT can put into practice.”
 
-🇺🇸 For a long time, the United States has been Taiwan’s most important ally and partner in the security field. In 1979, the Taiwan Relations Act was supported and passed by the US Congress's cross-party. It was clearly stated that the US government should provide "defense materials and technical services that enable Taiwan to obtain sufficient quantities to maintain sufficient self-defense capabilities." This has ensured that the United States supports Taiwan’s policy of maintaining its own self-defense capabilities and also consolidates its security. 
+🛩️ Those interested in learning more about why Taiwan is purchasing advanced weapons like the F-16 C/D Block 70 fighters and M1A2T Abrams tanks, as well as the reasons for closer U.S.-Taiwan defense cooperation, must take part in any discussions on the bilateral security relationship.
 
- Since 2008, the US government has sold more than US$24 billion to Taiwan, and the amount and projects that Chinese governments have purchased from the US military are regarded as extremely important indicators for measuring the ups and downs of bilateral relations. . Today, in addition to observing and commenting on this national event, the "digital dialogue" has also given everyone a rare opportunity to participate in the actual situation. Finally, we also share a message in advance: After the four major issues of the "Digital Dialogue" are behind, the relevant US units and organizations will continue to take the "Development of Talents Major Alliance Program" as the main axis and start a new phase. Digital dialogue, please wait and see. 
+🇺🇸 The U.S. is Taiwan’s most important security ally and partner. In 1979, the Taiwan Relations Act was enacted by the U.S. Congress in a bipartisan vote of support. It states that the U.S. government should provide “defense materials and technical services that enable Taiwan to obtain sufficient quantities to maintain sufficient self-defense capabilities.” This ensures the U.S. supports Taiwan’s policy of maintaining robust self-defense capabilities while consolidating national security.
+
+✍️ Since 2008, the U.S. has sold defensive weapons worth more than US$24 billion to Taiwan—an amount underscoring the strength of two-way ties. In addition to analyzing and discussing this key development, the Digital Dialogues give the people a voice in this vital aspect of U.S.-Taiwan relations.
+
+🔜 AIT has said the AIT@40 Digital Dialogues for 2019 are not the end of the road for this revolutionary participatory policymaking initiative. They intend to continue to engage in future digital dialogues on the U.S-Taiwan relationship, including for the drafting of the Talent Circulation Alliance White Paper, which will become part of AmCham’s influential annual White Paper. Keep a close eye on this potential-laden public-private partnership for the latest updates.
