* add a few more links

--- a/_i18n/en/_posts/2019-09-23-許一個安全的台灣.md
+++ b/_i18n/en/_posts/2019-09-23-許一個安全的台灣.md
@@ -9,16 +9,16 @@
     - "Open Government"
 ---
 
-🛡️ Taiwan is home to more than 23 million people. One point on which all agree is the importance of safeguarding national security. In the past, related policymaking was the exclusive domain of the government. Today, the people can help shape this critically important process by participating in the on-going [Digital Dialogue](https://talkto.ait.org.tw/).
+🛡️ Taiwan is home to more than 23 million people. One point on which all agree is the importance of safeguarding national security. In the past, related policymaking was the exclusive domain of the government. Today, the people can help shape this critically important process by participating in the on-going [Digital Dialogue](https://ait-polis.pdis.nat.gov.tw/55drvcpvrk).
 
 📲 The Digital Dialogues are part of the AIT@40 campaign launched by the American Institute in Taiwan (AIT), the Ministry of Foreign Affairs, and the Public Digital Innovation Space in an effort to help digitally democratize the U.S.-Taiwan relationship.  They are, according to AIT, “the first of its kind anywhere in the world  – a public forum to discuss the results of an artificial intelligence-enabled digital dialogue between a foreign mission and a local community on how to tackle a pressing foreign policy challenge.”
 
-🍀 They comprise four online public consultations this year on Taiwan’s role in global society, April; U.S.-Taiwan economic and commercial exchanges, June; U.S.-Taiwan security cooperation, August; and people-to-people ties, November.  As AIT Director Brent Christensen said, “AIT is interested in what you, the public, have to say on these matters.  We hope these dialogues will provide valuable insights that AIT can put into practice.”
+🍀 They comprise four online public consultations this year on Taiwan’s role in global society, April; U.S.-Taiwan economic and commercial exchanges, June; [U.S.-Taiwan security cooperation](https://ait-polis.pdis.nat.gov.tw/55drvcpvrk), August; and people-to-people ties, November.  As AIT Director Brent Christensen said, “AIT is interested in what you, the public, have to say on these matters.  We hope these dialogues will provide valuable insights that AIT can put into practice.”
 
 🛩️ Those interested in learning more about why Taiwan is purchasing advanced weapons like the F-16 C/D Block 70 fighters and M1A2T Abrams tanks, as well as the reasons for closer U.S.-Taiwan defense cooperation, must take part in any discussions on the bilateral security relationship.
 
 🇺🇸 The U.S. is Taiwan’s most important security ally and partner. In 1979, the Taiwan Relations Act was enacted by the U.S. Congress in a bipartisan vote of support. It states that the U.S. government should provide “defense materials and technical services that enable Taiwan to obtain sufficient quantities to maintain sufficient self-defense capabilities.” This ensures the U.S. supports Taiwan’s policy of maintaining robust self-defense capabilities while consolidating national security.
 
-✍️ Since 2008, the U.S. has sold defensive weapons worth more than US$24 billion to Taiwan—an amount underscoring the strength of two-way ties. In addition to analyzing and discussing this key development, the Digital Dialogues give the people a voice in this vital aspect of U.S.-Taiwan relations.
+✍️ Since 2008, the U.S. has sold defensive weapons worth more than US$24 billion to Taiwan—an amount underscoring the strength of two-way ties. In addition to analyzing and discussing this key development, the [Digital Dialogues](https://ait-polis.pdis.nat.gov.tw/55drvcpvrk) give the people a voice in this vital aspect of U.S.-Taiwan relations.
 
 🔜 AIT has said the AIT@40 Digital Dialogues for 2019 are not the end of the road for this revolutionary participatory policymaking initiative. They intend to continue to engage in future digital dialogues on the U.S-Taiwan relationship, including for the drafting of the Talent Circulation Alliance White Paper, which will become part of AmCham’s influential annual White Paper. Keep a close eye on this potential-laden public-private partnership for the latest updates.
