--- a/_i18n/zh-TW/_posts/2019-09-23-許一個安全的台灣.md
+++ b/_i18n/zh-TW/_posts/2019-09-23-許一個安全的台灣.md
@@ -8,14 +8,14 @@ category: blog
 tags: [開放政府]
 ---
 
-🛡️ 作為兩千三百萬國人的家園，維護國家安全，一直都是全民共同的期盼，更是努力的目標。與過去不同的是，今天的我們，有了更多討論國家安全事務、做出貢獻的機會：例如，上網參與「『智』同道合–數位對話」（ [TalkTo.AIT.org.tw](https://talkto.ait.org.tw/) ）。
+🛡️ 作為兩千三百萬國人的家園，維護國家安全，一直都是全民共同的期盼，更是努力的目標。與過去不同的是，今天的我們，有了更多討論國家安全事務、做出貢獻的機會：例如，上網參與「『智』同道合–數位對話」（ [TalkTo.AIT.org.tw](https://ait-polis.pdis.nat.gov.tw/55drvcpvrk)）。
 
-📲 「數位對話」，是由美國在台協會（AIT）、外交部，以及我的辦公室（行政院公共數位創新空間，PDIS）所合作推出。一系列的線上公眾諮詢，將分別在今年的四、六、八、十一月針對「增進台灣在全球社會的角色」、「增進美台經濟與商業關係」、目前討論中的「增進美台安全合作」，與接下來的「增進美台人民的關係」等四大議題，公開向大眾徵求建言。
+📲 「數位對話」，是由美國在台協會（AIT）、外交部，以及我的辦公室（行政院公共數位創新空間，PDIS）所合作推出。一系列的線上公眾諮詢，將分別在今年的四、六、八、十一月針對「增進台灣在全球社會的角色」、「增進美台經濟與商業關係」、目前討論中的「[增進美台安全合作](https://ait-polis.pdis.nat.gov.tw/55drvcpvrk)」，與接下來的「增進美台人民的關係」等四大議題，公開向大眾徵求建言。
 
 🛩️ 換句話說，如果想知道為什麼台灣需要向美國採購最新型的「F-16V」戰機，或是號稱地表最強大的戰車「M1A2」，能夠增加多少自我防衛能力，以及我們應該如何與美國合作，以便強化自身的國防產業，任何關於台美安全合作的討論，都是我們正在徵求的內容。
 
 🇺🇸 長期以來，美國都是台灣在安全領域最重要的盟友與夥伴。1979 年，《台灣關係法》獲得美國國會跨黨派的支持並通過，其中明訂美國政府應提供「使台灣能夠獲得數量，足以使其維持足夠自衛能力的防衛物資及技術服務」。由此，確保了美國支持台灣保有自我防衛能力的政策，也鞏固了我國的安全。
 
-✍️ 自 2008 年至今，美國各屆政府已對台灣軍售超過 240 億美元，而我國歷屆政府，也都將向美軍購的金額與項目，視為衡量雙邊關係起伏極為重要的指標。今天，除了觀察與評論這件國家大事，「數位對話」也給了大家一個難得實際參與，推波助瀾的機會。
+✍️ 自 2008 年至今，美國各屆政府已對台灣軍售超過 240 億美元，而我國歷屆政府，也都將向美軍購的金額與項目，視為衡量雙邊關係起伏極為重要的指標。今天，除了觀察與評論這件國家大事，[「數位對話」](https://ait-polis.pdis.nat.gov.tw/55drvcpvrk)也給了大家一個難得實際參與，推波助瀾的機會。
 
 🔜 最後，也預先分享一個訊息：在「數位對話」的四大議題告一段落後，美方相關單位與組織，將繼續以「人才循環大聯盟計畫」為主軸，展開新階段的數位對話，請大家拭目以待。
