--- a/_i18n/en/_posts/2019-10-07-2020-亞太社企高峰會在桃園.md
+++ b/_i18n/en/_posts/2019-10-07-2020-亞太社企高峰會在桃園.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
-  title: "Apple Column: 2020 Asia Pacific Social Enterprise Summit in Taoyuan"
-  excerpt: "The City is studying the “Taoyuan City Local Voluntary Inspection Report” and hopes to become the 12th local government in the world to verify and track the effectiveness of the sustainable development goals in the region with actual data and cases."
+  title: "2020 Asia Pacific Social Enterprise Summit in Taoyuan"
+  excerpt: "Mayor Cheng also revealed that the city is planning on a “Voluntary Local Review,” hoping to become the 12th local government in the world to verify and track the effectiveness of the SDGs."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/d/d121856e14443e4de5b39978ed77d84c5b8dc0b0.jpeg"
   author: "唐鳳、黃子維"
   category: "blog"
@@ -9,11 +9,12 @@
     - "社會創新"
 ---
 
+🆕 I would like to share with you the good news: The 3rd Asia-Pacific Social Enterprise Summit will be held in Taoyuan in early May 2020. The organizer is Impact Hub Taipei, with authorization by the SME Agency, Ministry of Economic Affairs (MOEA).
 
- 🆕 Share a good news with you: The 3rd Asia-Pacific Social Enterprise Summit will be held in Taoyuan in early May 2020. The organizer is the “Tempenary Hub Taipei” authorized by the Ministry of Economic Affairs of the Ministry of Economic Affairs. )"team. 
+🏡 The last two summits were held in Taichung and Kaohsiung respectively. Not only did they attract thousands of highly enthusiastic and experienced people from all over the world, but also through the continuous hosting of the summit, the summits gave participants from other countries the opportunity to learn about contributions from Taiwan. At the same time, the summits gave the domestic population with the same ambitions and hope to have a platform for communications and discussions, so as to solve specific social issues and to promote sustainable development through innovative business models and business ideas.
 
- The last two summits were held in Taichung and Kaohsiung respectively. Not only did it attract thousands of highly enthusiastic and experienced people from all over the world, but also the participation of other countries through the continuous holding of the summit. Those have the opportunity to understand the development of Taiwan in related fields. At the same time, let the domestic people share their ambitions and hope that through innovative business models and business ideas, to solve specific social problems and promote sustainable development, there is a platform for exchanges and discussions. 
+🤝 Of course, the most important aspect of hosting an international event is the local connections. In late September, MOEA colleagues and I, accompanying the organizers of the summit, met with Mayor Cheng Wen-tsan to seek administrative support from the city government. In addition to the promise of the Mayor Cheng regarding the support of the projects related to the venue of the summit, transportation connection, and enterprise connection, Mayor Cheng very efficiently formed an inter-departmental coordination group. He also introduced in detail the government’s assistance to the social enterprises, and suggested that the organizers could include more local elements of Taoyuan in the peripheral activities of the summit such as "social enterprise tours" and "social enterprise market." It is worth expecting these elements in next year's summit.
 
- Of course, the most important thing is to hold an international event. In late September, I accompanied my colleagues from the Ministry of Economic Affairs to accompany the organizers of the summit and met with Mayor Zheng Wencan to seek administrative support from the city. In addition to the promises on the spot, Mr. Zheng promised to lend a helping hand on the project schedule, transportation connection, and enterprise serial connection. It also made an efficient drafting of the inter-departmental ad hoc group, which is more like the introduction of the city’s past years. Auxiliary social enterprises, and suggested that the organizers can include more local elements of Taoyuan in activities such as "social business travel" and "social enterprise market". These are believed to be presented in the course of the next year's summit. It is worth waiting for. In addition, in order to promote the UN's 17 sustainable development goals and implement the overall policy objectives of "friendly and friendly, suitable and suitable for employment", Mayor Zheng Wencan also revealed that the municipal government is studying the "Taoyuan City Local Voluntary Inspection Report". (Voluntary Local Review, VLR), hopes to become the 12th local government in the world to verify and track the effectiveness of the sustainable development goals in the region with actual data and cases. 
+🌏 Moreover, in order to promote the 17 sustainable development goals and implement the overall policy objectives of "friendly and kind, suitable to live and work," Mayor Cheng also revealed that the city is planning on a "Voluntary Local Review," hoping to become the 12th local government in the world to verify and track the effectiveness of the sustainable development goals in the region with actual data and cases.
 
- In fact, according to the main internal economic statistics indicators of the counties and cities of the Ministry of the Interior in 2018, the total fertility rate of Taoyuan City is not only the highest in Liudu, but also the second in the country, second only to Lianjiang County. In addition, Taoyuan is also the city with the highest net migration rate in Taiwan and the highest rate of social increase. These figures not only represent the achievements of Taoyuan in recent years, but also the foundation for promoting social innovation in the future. We hope that the addition of Taoyuan will be able to demonstrate for other counties and cities, and let Taiwan continue to grow on the road of sustainable development. 
+📈 In fact, according to the statistics indicators of the counties and cities of the Ministry of the Interior in 2018, the total birth rate of Taoyuan City is not only the highest in the six municipalities, but also one of the highest in the country, second only to the Lianjiang County. In addition, Taoyuan is the city with the highest net migration rate in Taiwan and the highest rate of social increase. These figures not only represent the achievements of Taoyuan in recent years, but also the foundation for promoting social innovation in the future. We look forward to Taoyuan's contributions as a demonstration for all counties and cities in Taiwan, so we can flourish together toward the goals of sustainable development.
