--- a/_i18n/zh-TW/_posts/2017-09-10-ray2017.md
+++ b/_i18n/zh-TW/_posts/2017-09-10-ray2017.md
@@ -8,7 +8,7 @@ category: project
 tags: [RAY, 青年參與, UI, UX]
 ---
 
-# 籌備階段
+## 籌備階段
 
 106 年 5 月間，線上報稅系統無法相容 Safari 瀏覽器，引發民眾抱怨，後來Mac 使用者操作銓敘部年金試算系統時，也遇到障礙。
 
@@ -18,33 +18,33 @@ PDIS 小組除了提供技術建議，協助排除問題，也依院長指示，
 
 PDIS 小組期待，透過此實驗性計畫，導入「使用者體驗」的思維，強化政府網站於不同瀏覽器的可用性；也藉此計畫，實驗「遠端」與「協作」的工作模式，並增進青年學生對政府工作的瞭解與參與。
 
-# 計畫設計
+## 計畫設計
 
 前提：由於計畫目標為檢測 Safari ，見習的夥伴擁有 Safari 變得相對重要。
 
-# 流程規劃
+## 流程規劃
 
 經評估 Google 表單和 Github 等系統，PDIS 小組決定將檢測流程統一於 PDIS 網站後台（[https://talk.pdis.nat.gov.tw/](https://talk.pdis.nat.gov.tw/){:target="_blank"}）的 Discourse 論壇系統上呈現。
 
 使用 Discourse 的原因之一在於可以設定 template，確立回報格式，格式範例可置底供參。
 
-# 工時判定
+## 工時判定
 
 有鑑於遠端工作難以判定工時，PDIS 小組決定用「處理網站數量」做為判定基準，分為 1 小時和 0.5 小時。
 
-# 分工設計
+## 分工設計
 
 所有見習生分組，一組共 2 個一般生配合 1 個資訊生。一般生同學抓蟲（找出網頁問題）後，由資訊生同學檢查並提出改善的解法（程式碼）。PDIS 小組的工程師也擔任「小天使」，在同學卡關時給予協助。
 
 值得說明的是，此計畫是基於積極主動的價值上，因此小天使僅為輔助角色，計畫仍由同學自發協作。
 
-# SLACK
+## SLACK
 
 為方便遠端工作，PDIS 小組與見習生使用通訊軟體 Slack 作為聯絡管道，檢查網頁或撰寫報告時如有問題，可隨時提問。
 
 ---
 
-# 相關文件
+## 相關文件
 
 - [RAY 計畫概要](https://docs.google.com/document/d/1frpciBMwBz0SjOfoB6DIukM6OR3slcpfINa6PevCJtk/){:target="_blank"}
 
