--- a/_i18n/en/_posts/2017-09-10-ray2017.md
+++ b/_i18n/en/_posts/2017-09-10-ray2017.md
@@ -7,15 +7,16 @@
   category: "project"
   tags: 
     - "RAY"
-    - "青年參與"
+    - "Youth participation"
     - "UI"
     - "UX"
 ---
 
+__auto-translated__
 
-# Preparation phase
+## Preparation phase
 
-In May of May, the online tax filing system was not compatible with the Safari browser, causing complaints from the public. Later, when Mac users operated the 年 部 annuity trial system, they also encountered obstacles. 
+In May of 2018, the online tax filing system was not compatible with the Safari browser, causing complaints from the public. Later, when Mac users operated the annuity trial system, they also encountered obstacles. 
 
 In addition to providing technical advice to assist in troubleshooting, the PDIS team also consulted with the Dean to discuss solutions to similar problems on government agencies' websites to achieve the goal of equal access across systems, platforms and devices. 
 
@@ -23,34 +24,34 @@ As the National Development Association has listed the compatibility of browsers
 
 The PDIS team is looking forward to introducing the "user experience" thinking through this experimental project to enhance the usability of government websites in different browsers. It also uses this project to experiment with "remote" and "collaboration". Work mode and enhance the understanding and participation of young students in government work. 
 
-# Project Design
+## Project Design
 
 Premise: As the goal of the project is to detect Safari, it is relatively important for the trainee's partner to own Safari. 
 
-# Process Planning
+## Process Planning
 
-After evaluating Google Forms and Github, the PDIS team decided to unify the inspection process on the back of the PDIS website ([https://talk.pdis.nat.gov.tw/](https ://talk.pdis.nat.gov.tw/){:target="_blank"}) is presented on the Discourse Forum system. 
+After evaluating Google Forms and Github, the PDIS team decided to unify the inspection process on the back of the PDIS website ([https://talk.pdis.nat.gov.tw/](https://talk.pdis.nat.gov.tw/){:target="_blank"}) is presented on the Discourse Forum system. 
 
 One of the reasons for using Discourse is that you can set the template to establish the return format, and the format examples can be used for reference. 
 
-# Work Time Judgment
+## Work Time Judgment
 
 In view of the difficulty in determining the working hours for remote work, the PDIS team decided to use "number of processing sites" as the benchmark for 1 hour and 0.5 hours. 
 
-# Division of work design
+## Division of work design
 
 All trainee groups, a group of 2 general students with 1 information student. After the general students catch the insects (find the webpage problem), the information students will check and propose an improved solution (code). The engineers of the PDIS team also served as "Little Angels" and assisted when the classmates closed. It is worth noting that this project is based on proactive value, so the little angel is only a secondary role, and the project is still spontaneously coordinated by the students. 
 
-# SLACK
+## SLACK
 
 To facilitate remote work, the PDIS team and the trainee use the communication software Slack as a communication channel. If you have problems checking the webpage or writing a report, you can ask questions at any time. 
 
 ---
 
-# Related files
+## Related files
 
 - [RAY Project Summary](https://docs.google.com/document/d/1frpcibmwbz0sjofob6diukm6or3slcpfina6pevcjtk/){:target="_blank" }
 
 - [RAY FAQ](http://ray.pdis.tw/#faq){:target="_blank"}
 
-- [See the official website](https://ray2017. pdis.nat.gov.tw/){:target="_blank"}
+- [See the official website](https://ray2017.pdis.nat.gov.tw/){:target="_blank"}
